// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EVM Functions > Personal Message Encoding > encodes buffer message 1`] = `"48656c6c6f2c20576f726c6421"`;

exports[`EVM Functions > Personal Message Encoding > encodes string message 1`] = `"48656c6c6f2c20576f726c6421"`;

exports[`EVM Functions > Transaction Encoding > encodes EIP1559 transaction 1`] = `"7b22746f223a22307831323334353637383930313233343536373839303132333435363738393031323334353637383930222c2276616c7565223a2231303030303030303030303030303030303030222c2264617461223a223078222c22636861696e4964223a312c226e6f6e6365223a302c22676173223a223231303030222c226d6178466565506572476173223a2232303030303030303030222c226d61785072696f72697479466565506572476173223a2231303030303030303030222c2274797065223a2265697031353539227d"`;

exports[`EVM Functions > Transaction Encoding > encodes legacy transaction 1`] = `"7b22746f223a22307831323334353637383930313233343536373839303132333435363738393031323334353637383930222c2276616c7565223a2231303030303030303030303030303030303030222c2264617461223a223078222c22636861696e4964223a312c226e6f6e6365223a302c22676173223a223231303030222c2274797065223a226c6567616379227d"`;

exports[`EVM Functions > TypedData Encoding > encodes EIP712 typed data 1`] = `"7b227479706573223a7b22506572736f6e223a5b7b226e616d65223a226e616d65222c2274797065223a22737472696e67227d2c7b226e616d65223a2277616c6c6574222c2274797065223a2261646472657373227d5d7d2c22646f6d61696e223a7b226e616d65223a2254657374222c2276657273696f6e223a2231222c22636861696e4964223a317d2c227072696d61727954797065223a22506572736f6e222c226d657373616765223a7b226e616d65223a22426f62222c2277616c6c6574223a22307831323334353637383930313233343536373839303132333435363738393031323334353637383930227d7d"`;

exports[`EVM Functions > decodeCalldata > decodes multicall calldata 1`] = `
[
  null,
]
`;

exports[`EVM Functions > decodeCalldata > decodes transfer calldata 1`] = `
[
  "b97ef9ef8734c71904d8002f8b6bc66dd9c48a6e",
  "100",
]
`;

exports[`EVM Functions > getNestedCalldata > extracts nested calls from multicall 1`] = `
[
  null,
]
`;

exports[`EVM Functions > parseCanonicalName > parses function with arrays 1`] = `
{
  "def": [
    "multicall",
    "bytes[]",
  ],
}
`;

exports[`EVM Functions > parseCanonicalName > parses simple function 1`] = `
{
  "def": [
    "transfer",
    "address",
    "uint256",
  ],
}
`;

exports[`EVM Functions > parseFunction > parses function with arrays 1`] = `
{
  "inputs": [
    {
      "type": "bytes[]",
    },
  ],
  "name": "multicall",
  "outputs": [],
  "stateMutability": "nonpayable",
  "type": "function",
}
`;

exports[`EVM Functions > parseFunction > parses function with complex types 1`] = `
{
  "inputs": [
    {
      "components": [
        {
          "name": "token",
          "type": "address",
        },
        {
          "name": "amount",
          "type": "uint256",
        },
      ],
      "type": "tuple",
    },
    {
      "type": "uint256[]",
    },
    {
      "type": "bytes",
    },
  ],
  "name": "complexFunction",
  "outputs": [],
  "stateMutability": "nonpayable",
  "type": "function",
}
`;

exports[`EVM Functions > parseFunction > parses simple function 1`] = `
{
  "inputs": [
    {
      "type": "address",
    },
    {
      "type": "uint256",
    },
  ],
  "name": "transfer",
  "outputs": [],
  "stateMutability": "nonpayable",
  "type": "function",
}
`;

exports[`EVM Functions > parseSolidityJSONABI > handles JSON string ABI 1`] = `
{
  "def": [
    "transfer",
    "address",
    "uint256",
  ],
}
`;

exports[`EVM Functions > parseSolidityJSONABI > parses valid ABI 1`] = `
{
  "def": [
    "transfer",
    "address",
    "uint256",
  ],
}
`;

exports[`EVM Functions > replaceNestedDefs > replaces nested definitions 1`] = `
[
  "multicall",
  "transfer,address,uint256",
]
`;
